Emotional agent cheshire-cat-core configuration

--- a/.env
+++ b/.env
@@ -20,7 +20,11 @@ PYTHONUNBUFFERED=1
 
 # Configurazione modelli
 MODEL_API=http://ollama:11434
-OLLAMA_MODEL=llama3
+OLLAMA_MODEL=llama3.2:3b
+
+# Configurazione Cheshire Cat LLM
+CORE_LLM_SERVICE=ollama
+AUTOMATIC_CORE_LLM_LOADING=true
 
 # Configurazione rete
 WORKER_CONNECTIONS=1024
