--- a/api-gateway/nginx.conf
+++ b/api-gateway/nginx.conf
@@ -7,39 +7,43 @@ http {
         listen 80;
 
         # Routing per il frontend
-        location / {
-            proxy_pass http://frontend:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
+        #location / {
+        #    proxy_pass http://frontend:3000;
+        #    proxy_set_header Host $host;
+        #    proxy_set_header X-Real-IP $remote_addr;
+        #}
 
         # Routing per STT
-        location /api/stt {
-            proxy_pass http://stt-service:5001;
-        }
+        #location /api/stt {
+        #    proxy_pass http://stt-service:5001;
+        #}
 
         # Routing per emotion predictor
-        location /api/emotion {
-            proxy_pass http://emotion-predictor:5002;
-        }
+        #location /api/emotion {
+        #    proxy_pass http://emotion-predictor:5002;
+        #}
 
         # Routing per chatbot
         location /api/chat {
             proxy_pass http://chatbot-service:5003;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_http_version 1.1;
+            proxy_read_timeout 90s;
         }
 
         # Routing per TTS
-        location /api/tts {
-            proxy_pass http://tts-service:5004;
-        }
+        #location /api/tts {
+        #    proxy_pass http://tts-service:5004;
+        #}
 
         # Routing per Cheshire Cat
-        location /api/cheshire {
-            proxy_pass http://cheshire-cat-core:80;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
+        location /api/cheshire/ {
+            proxy_pass http://cheshire-cat-core:80/;
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_http_version 1.1;
+            proxy_read_timeout 90s;
         }
     }
 }
