First frontend configuration

--- a/api-gateway/nginx.conf
+++ b/api-gateway/nginx.conf
@@ -7,11 +7,11 @@ http {
         listen 80;
 
         # Routing per il frontend
-        #location / {
-        #    proxy_pass http://frontend:3000;
-        #    proxy_set_header Host $host;
-        #    proxy_set_header X-Real-IP $remote_addr;
-        #}
+        location / {
+            proxy_pass http://frontend:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
 
         # Routing per STT
         #location /api/stt {
