--- a/.env
+++ b/.env
@@ -13,6 +13,7 @@ API_GATEWAY_PORT=80
 # URLs per servizi interni
 CHESHIRE_CAT_URL=http://cheshire-cat-core:80
 OLLAMA_URL=http://ollama:11434
+API_GATEWAY_URL=http://api-gateway:80
 
 # Configurazioni ambiente
 NODE_ENV=development
@@ -25,6 +26,10 @@ OLLAMA_MODEL=llama3.2:3b
 # Configurazione Cheshire Cat LLM
 CORE_LLM_SERVICE=ollama
 AUTOMATIC_CORE_LLM_LOADING=true
+
+# Configurazione emotion-predictor
+MODEL_PATH=./model/emotion_classifier.h5
+SCALER_PATH=./model/scaler.pkl
 
 # Configurazione rete
 WORKER_CONNECTIONS=1024
