--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     environment:
       - NODE_ENV=${NODE_ENV}
       - FRONTEND_PORT=${FRONTEND_PORT}
+      - API_GATEWAY_URL=${API_GATEWAY_URL}
     #restart: always
 
   stt-service:
@@ -42,8 +43,11 @@ services:
       - ./emotion-predictor:/app
     environment:
       - PYTHONUNBUFFERED=${PYTHONUNBUFFERED}
+      - PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
       - EMOTION_PREDICTOR_PORT=${EMOTION_PREDICTOR_PORT}
-    #restart: always
+      - MODEL_PATH=${MODEL_PATH}
+      - SCALER_PATH=${SCALER_PATH}
+    restart: always
 
   tts-service:
     build: ./tts-service
