--- a/emotion-predictor/Dockerfile
+++ b/emotion-predictor/Dockerfile
@@ -4,6 +4,11 @@ FROM python:3.9-slim
 WORKDIR /app
 
 COPY requirements.txt .
+RUN apt-get update && apt-get install -y \
+    ffmpeg \
+    libsndfile1 \
+    libsndfile1-dev \
+    && rm -rf /var/lib/apt/lists/*
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
