--- a/emotion-predictor/requirements.txt
+++ b/emotion-predictor/requirements.txt
@@ -1,1 +1,12 @@
 #TODO: Implementare
+fastapi==0.95.0
+uvicorn==0.21.1
+librosa==0.10.0
+numpy>=1.26.0,<2.1.0
+joblib==1.2.0
+python-multipart==0.0.5
+scikit-learn>=1.3.0
+tensorflow==2.18.0
+protobuf==4.25.6
+soundfile>=0.12.1
+audioread>=3.0.0
