STT and TTS implemented

--- a/.env
+++ b/.env
@@ -31,6 +31,10 @@ AUTOMATIC_CORE_LLM_LOADING=true
 MODEL_PATH=./model/emotion_classifier.h5
 SCALER_PATH=./model/scaler.pkl
 
+# Configurazione stt-service
+WHISPER_MODEL_SIZE=small
+WHISPER_LANGUAGE=it
+
 # Configurazione rete
 WORKER_CONNECTIONS=1024
 
