--- a/api-gateway/nginx.conf
+++ b/api-gateway/nginx.conf
@@ -14,14 +14,13 @@ http {
         }
 
         # Routing per STT
-        #location /api/stt/ {
-        #    proxy_pass http://stt-service:5001/;
-        #    proxy_pass http://tts-service:5004/;
-        #    proxy_set_header Host $host;
-        #    proxy_set_header X-Real-IP $remote_addr;
-        #    proxy_http_version 1.1;
-        #    proxy_read_timeout 90s;
-        #}
+        location /api/stt/ {
+            proxy_pass http://stt-service:5001/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_http_version 1.1;
+            proxy_read_timeout 90s;
+        }
 
         # Routing per emotion predictor
         location /api/emotion/ {
@@ -42,13 +41,13 @@ http {
         }
 
         # Routing per TTS
-        #location /api/tts/ {
-        #    proxy_pass http://tts-service:5004/;
-        #    proxy_set_header Host $host;
-        #    proxy_set_header X-Real-IP $remote_addr;
-        #    proxy_http_version 1.1;
-        #    proxy_read_timeout 90s;
-        #}
+        location /api/tts/ {
+            proxy_pass http://tts-service:5004/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_http_version 1.1;
+            proxy_read_timeout 90s;
+        }
 
         # Routing per Cheshire Cat
         location /api/cheshire/ {
