--- a/stt-service/Dockerfile
+++ b/stt-service/Dockerfile
@@ -3,6 +3,8 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
+RUN apt-get update && apt-get install -y ffmpeg && apt-get clean
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
