--- a/stt-service/requirements.txt
+++ b/stt-service/requirements.txt
@@ -1,1 +1,6 @@
-#TODO: Implementare
+fastapi>=0.95.0
+pydantic>=1.10.7
+uvicorn>=0.22.0
+TTS>=0.17.0,<0.18.0
+python-multipart>=0.0.6
+aiofiles>=23.1.0
