--- a/tts-service/requirements.txt
+++ b/tts-service/requirements.txt
@@ -1,1 +1,10 @@
-#TODO: Implementare
+fastapi>=0.95.0
+uvicorn>=0.21.1
+pydantic>=1.10.7
+numpy>=1.24.3
+torch>=2.0.0
+torchaudio>=2.0.0
+ChatTTS>=0.0.9
+python-multipart>=0.0.6
+soundfile
+accelerate>=0.19.0
