enviroment-classifier implementation

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ STT_SERVICE_PORT=5001
 EMOTION_PREDICTOR_PORT=5002
 CHATBOT_SERVICE_PORT=5003
 TTS_SERVICE_PORT=5004
+ENV_CLASSIFIER_PORT=5005
 CHESHIRE_CAT_PORT_INTERNAL=80
 CHESHIRE_CAT_PORT_EXTERNAL=1865
 OLLAMA_PORT=11434
@@ -28,7 +29,7 @@ CORE_LLM_SERVICE=ollama
 AUTOMATIC_CORE_LLM_LOADING=true
 
 # Configurazione emotion-predictor
-MODEL_PATH=./model/emotion_classifier.h5
+MODEL_PATH=./model/emotion_classifier.keras
 SCALER_PATH=./model/scaler.pkl
 
 # Configurazione stt-service
