--- a/api-gateway/nginx.conf
+++ b/api-gateway/nginx.conf
@@ -32,17 +32,26 @@ http {
         }
 
         # Routing per chatbot
-        location /api/chat {
-            proxy_pass http://chatbot-service:5003;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_http_version 1.1;
-            proxy_read_timeout 90s;
-        }
+        #location /api/chat {
+        #    proxy_pass http://chatbot-service:5003;
+        #    proxy_set_header Host $host;
+        #    proxy_set_header X-Real-IP $remote_addr;
+        #    proxy_http_version 1.1;
+        #    proxy_read_timeout 90s;
+        #}
 
         # Routing per TTS
-        location /api/tts/ {
-            proxy_pass http://tts-service:5004/;
+        #location /api/tts/ {
+        #    proxy_pass http://tts-service:5004/;
+        #    proxy_set_header Host $host;
+        #    proxy_set_header X-Real-IP $remote_addr;
+        #    proxy_http_version 1.1;
+        #    proxy_read_timeout 90s;
+        #}
+
+        # Routing per enviroment-classifier
+        location /api/environment/ {
+            proxy_pass http://environment-classifier:5005/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_http_version 1.1;
@@ -50,12 +59,12 @@ http {
         }
 
         # Routing per Cheshire Cat
-        location /api/cheshire/ {
-            proxy_pass http://cheshire-cat-core:80/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_http_version 1.1;
-            proxy_read_timeout 90s;
-        }
+        #location /api/cheshire/ {
+        #    proxy_pass http://cheshire-cat-core:80/;
+        #    proxy_set_header Host $host;
+        #    proxy_set_header X-Real-IP $remote_addr;
+        #    proxy_http_version 1.1;
+        #    proxy_read_timeout 90s;
+        #}
     }
 }
