tts implementation with frontend

--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ MODEL_PATH=./model/emotion_classifier.keras
 SCALER_PATH=./model/scaler.pkl
 
 # Configurazione stt-service
-WHISPER_MODEL_SIZE=small
+WHISPER_MODEL_SIZE=base
 WHISPER_LANGUAGE=it
 
 # Configurazione rete
