--- a/api-gateway/nginx.conf
+++ b/api-gateway/nginx.conf
@@ -19,7 +19,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_http_version 1.1;
-            proxy_read_timeout 90s;
+            proxy_read_timeout 500s;
         }
 
         # Routing per emotion predictor
@@ -28,26 +28,26 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_http_version 1.1;
-            proxy_read_timeout 90s;
+            proxy_read_timeout 500s;
         }
 
         # Routing per chatbot
-        #location /api/chat {
-        #    proxy_pass http://chatbot-service:5003;
-        #    proxy_set_header Host $host;
-        #    proxy_set_header X-Real-IP $remote_addr;
-        #    proxy_http_version 1.1;
-        #    proxy_read_timeout 90s;
-        #}
+        location /api/chat {
+            proxy_pass http://chatbot-service:5003;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_http_version 1.1;
+            proxy_read_timeout 500s;
+        }
 
         # Routing per TTS
-        #location /api/tts/ {
-        #    proxy_pass http://tts-service:5004/;
-        #    proxy_set_header Host $host;
-        #    proxy_set_header X-Real-IP $remote_addr;
-        #    proxy_http_version 1.1;
-        #    proxy_read_timeout 90s;
-        #}
+        location /api/tts/ {
+            proxy_pass http://tts-service:5004/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_http_version 1.1;
+            proxy_read_timeout 500s;
+        }
 
         # Routing per enviroment-classifier
         location /api/environment/ {
@@ -55,16 +55,16 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_http_version 1.1;
-            proxy_read_timeout 90s;
+            proxy_read_timeout 500s;
         }
 
         # Routing per Cheshire Cat
-        #location /api/cheshire/ {
-        #    proxy_pass http://cheshire-cat-core:80/;
-        #    proxy_set_header Host $host;
-        #    proxy_set_header X-Real-IP $remote_addr;
-        #    proxy_http_version 1.1;
-        #    proxy_read_timeout 90s;
-        #}
+        location /api/cheshire/ {
+            proxy_pass http://cheshire-cat-core:80/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_http_version 1.1;
+            proxy_read_timeout 90s;
+        }
     }
 }
